--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
-.p {
-    font-size: 10px;
+h1 {
+    color: blue;
 }
 
-h1 {
-    color: aquamarine;
+p {
+    font-size: medium;
+    font-family: 'Times New Roman', Times, serif;
+    color: brown;
 }
