--- a/css/styles.css
+++ b/css/styles.css
@@ -5,5 +5,9 @@ h1 {
 p {
     font-size: medium;
     font-family: 'Times New Roman', Times, serif;
-    color: brown;
+    color: black;
+}
+
+*{
+    margin: auto;
 }
